<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_light"
    android:id="@+id/dashboard_background"
    android:weightSum="5.5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:weightSum="2.4"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:layout_weight="2.4">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:textSize="18sp"
                android:textColor="#FFF"
                android:gravity="center|left"
                android:id="@+id/txt_dash_yourtrak"
                android:layout_marginLeft="10dp"
                android:text="Tracking Details"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">
                <!-- <com.github.mikephil.charting.charts.HorizontalBarChart
                     android:id="@+id/chart"
                     android:layout_width="match_parent"
                     android:layout_marginLeft="10dp"
                     android:layout_height="match_parent" />-->

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="@drawable/gradient_btn_dashboard"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginTop="3dp"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"

            android:paddingBottom="15dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="3"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:clickable="true"
                    android:onClick="EmergencyClick"
                    android:background="@drawable/border_shadow_orange"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.4"
                        android:gravity="center"
                        android:textSize="40sp"
                        android:textColor="#FFF"
                        android:id="@+id/txt_dash_emergencyico"
                        android:text="@string/fa_emergency_ico"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:textColor="#FFF"
                        android:id="@+id/txt_dash_emergencytext"
                        android:text="Emergency"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:clickable="true"
                    android:onClick="FriendNearClick"
                    android:background="@drawable/border_shadow_indigo"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/txt_dash_friendnearico"
                        android:layout_weight="0.6"
                        android:gravity="center"
                        android:textSize="40sp"
                        android:textColor="#FFF"
                        android:text="@string/fa_friendnear_ico"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.4"
                        android:gravity="center"
                        android:textColor="#FFF"
                        android:id="@+id/txt_dash_friendneartext"
                        android:text="Friend Near"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:clickable="true"
                    android:onClick="AddFriendClick"
                    android:background="@drawable/border_shadow_cyan"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.6"
                        android:gravity="center"
                        android:textSize="40sp"
                        android:textColor="#FFF"
                        android:text="@string/fa_addfriend_ico"
                        android:id="@+id/txt_dash_addfriendico"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.4"
                        android:gravity="center"
                        android:textColor="#FFF"
                        android:id="@+id/txt_dash_addfrndtext"
                        android:text="Add Friend"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:onClick="InviteToFriendClick"
                    android:background="@drawable/border_shadow_green"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.6"
                        android:textSize="40sp"
                        android:textColor="#FFF"
                        android:layout_marginTop="5dp"
                        android:id="@+id/txt_dash_invitefrndico"
                        android:gravity="center"
                        android:text="@string/fa_invitefrnd_ico"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.4"
                        android:gravity="center"
                        android:textColor="#FFF"
                        android:id="@+id/txt_dash_invitefrndtext"
                        android:text="Invite Friend"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:clickable="true"
                    android:onClick="NearByPlaceClick"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/border_shadow"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:textSize="40sp"
                        android:textColor="#FFF"
                        android:text="@string/fa_nearbyplac_ico"
                        android:id="@+id/txt_dash_nearybyplaceico"
                        android:layout_weight="0.6"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.4"
                        android:textColor="#FFF"
                        android:gravity="center"
                        android:id="@+id/txt_dash_nearbyplacetext"
                        android:text="Near by Places"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:onClick="FriendListClick"
                    android:background="@drawable/border_shadow_purple"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:textSize="40sp"
                        android:layout_marginTop="5dp"
                        android:textColor="#FFF"
                        android:id="@+id/txt_dash_frndlistico"
                        android:text="@string/fa_frndlist_ico"
                        android:layout_weight="0.6"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.4"
                        android:gravity="center"
                        android:textColor="#FFF"
                        android:id="@+id/txt_dash_friendlisttext"
                        android:text="Friend List"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:onClick="Chatting"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_shadow_indigo"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:textSize="40sp"
                        android:textColor="#FFF"
                        android:text="@string/fa_chat_ico"
                        android:id="@+id/txt_dash_chatico"
                        android:layout_weight="0.6"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.4"
                        android:textColor="#FFF"
                        android:gravity="center"
                        android:id="@+id/txt_dash_chattext"
                        android:text="Chat"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:clickable="true"
                    android:onClick="PhotoAlbumClick"
                    android:background="@drawable/border_shadow_deepgrey"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:textSize="40sp"
                        android:layout_marginTop="5dp"
                        android:textColor="#FFF"
                        android:id="@+id/txt_dash_albumico"
                        android:text="@string/fa_album_ico"
                        android:layout_weight="0.6"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.4"
                        android:gravity="center"
                        android:textColor="#FFF"
                        android:id="@+id/txt_dash_albumtext"
                        android:text="Photo Album"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:onClick="NotificationListClick"
                    android:background="@drawable/border_shadow_green"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.6"
                        android:textSize="40sp"
                        android:textColor="#FFF"
                        android:layout_marginTop="5dp"
                        android:id="@+id/txt_dash_notifico"
                        android:gravity="center"
                        android:text="@string/fa_notif_ico"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.4"
                        android:gravity="center"
                        android:textColor="#FFF"
                        android:id="@+id/txt_dash_notiftext"
                        android:text="Notification"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <realizer.com.makemepopular.view.ProgressWheel
        android:id="@+id/loadingDashboard"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        android:layout_centerInParent="true"
        app:matProg_barColor="@color/colorAccent"
        app:matProg_progressIndeterminate="true"
        />

</RelativeLayout>
