<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="6.5"
    android:background="@drawable/gradient_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/user_img_bg"
                android:scaleType="fitXY"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000"
                android:alpha="0.7"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom|center">
                <RelativeLayout
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="20dp">
                    <realizer.com.makemepopular.view.RoundedImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/user_img"
                        android:scaleType="center"
                        android:src="@drawable/user_icon"/>
                    <TextView
                        android:id="@+id/setting_new_profile"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="1dp"
                        android:clickable="true"
                        android:background="@drawable/capture_icon"
                        android:visibility="visible"
                        android:gravity="bottom|left"
                        android:textColor="#000000" />

                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="User Name"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:id="@+id/user_name"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="0.7">
                    <TextView
                        android:layout_width="35dp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:id="@+id/user_prof_email_ico"
                        android:textColor="#fff"
                        android:layout_height="35dp"
                        android:text="@string/fa_email_ico"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:gravity="center|left"
                        android:id="@+id/setting_user_emailId"
                        android:text="test@test.com"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/border_line"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="0.7">
                    <TextView
                        android:layout_width="35dp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="#fff"
                        android:id="@+id/user_prof_dob_ico"
                        android:text="@string/fa_dob_ico"
                        android:layout_height="35dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:gravity="center|left"
                        android:id="@+id/setting_user_dob"
                        android:text="01/01/2016"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/border_line"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="0.7">
                    <TextView
                        android:layout_width="35dp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:id="@+id/user_prof_phone_ico"
                        android:textColor="#fff"
                        android:layout_height="35dp"
                        android:text="@string/fa_mobile_ico"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:gravity="center|left"
                        android:id="@+id/setting_user_phoneno"
                        android:text="1234567890"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <realizer.com.makemepopular.view.ProgressWheel
        android:id="@+id/loading"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:visibility="gone"
        android:layout_centerInParent="true"
        app:matProg_barColor="@color/colorAccent"
        app:matProg_progressIndeterminate="true"
        />

</RelativeLayout>